extends Node
class_name LocalManagers

@export var players: PlayersManager
@export var player_turns: PlayersTurnsManager
@export var atom_slots: AtomSlotsManager
@export var chain_reaction_sequences: ChainReactionSequenceManager
@export var undo_hisotry: UndoHistoryManager
@export var gameplay: GameplayManager
